--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -1,8 +1,3 @@
-a {
-    text-decoration: none;
-    color: #000;
-}
-
 * {
     padding: 0;
     margin: 0;
@@ -10,7 +5,19 @@ a {
     font-family: 'DM Sans', sans-serif;
 }
 
+:root {
+    --big-text: 200px;
+    --medium-text: 68px;
+    --normal-text: 23px;
+    --small-text: 19px;
+}
+
 body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+}
+
+a {
+    text-decoration: none;
+    color: #000;
 }
