--- a/src/layouts/AboutSection/AboutSection.css
+++ b/src/layouts/AboutSection/AboutSection.css
@@ -1,5 +1,5 @@
 .about {
-    min-height: 100vh;
+    height: 100vh;
     width: 100%;
     display: flex;
     background-color: var(--main-lighter-color);
@@ -7,7 +7,7 @@
 
 .about__text {
     width: 65%;
-    min-height: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -27,5 +27,19 @@
 
 .about__imgs {
     width: 35%;
-    background-color: red;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.about__imgs__imgWrapper {
+    flex: 1;
+    background-color: blue;
+}
+
+
+.about__imgs__imgWrapper__img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
