--- a/src/layouts/AboutSection/AboutSection.css
+++ b/src/layouts/AboutSection/AboutSection.css
@@ -2,7 +2,7 @@
     height: 100vh;
     width: 100%;
     display: flex;
-    background-color: var(--main-lighter-color);
+    background-color: var(--main-color);
 }
 
 .about__text {
@@ -33,8 +33,7 @@
 }
 
 .about__imgs__imgWrapper {
-    flex: 1;
-    background-color: blue;
+    height: 50%;
 }
 
 
@@ -42,4 +41,80 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+
+@media (max-width: 500px) {
+    .about {
+        height: 100%;
+        flex-direction: column;
+    }
+
+    .about__text {
+        width: 100%;
+        padding: 4rem 0;
+    }
+
+    .about__text__title {
+        font-size: 2rem;
+        width: 80%;
+    }
+
+    .about__text__desc {
+        font-size: 1rem;
+        width: 80%;
+    }
+
+    .about__imgs {
+        width: 100%;
+
+    }
+}
+
+.salon {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: var(--main-color);
+    gap: 1rem;
+}
+
+.salon__title {
+    margin-top: 1rem;
+    font-size: var(--medium-text);
+    font-weight: bold;
+}
+
+.salon__desc {
+    font-size: var(--normal-text);
+    width: 50%;
+    text-align: center;
+    margin-bottom: 1rem;
+}
+
+.salon__imgWrapper {
+    height: 100%;
+    width: 100%;
+}
+
+.salon__imgWrapper__img {
+    width: 100%;
+    height: 70%;
+    object-fit: cover;
+}
+
+@media (max-width: 500px) {
+    .salon__title {
+        font-size: 2rem;
+    }
+
+    .salon__desc {
+        font-size: 1rem;
+        width: 90%;
+    }
+
+    .salon__imgWrapper__img {
+        height: 100%;
+    }
 }
