--- a/src/layouts/BreakSection/BreakSection.css
+++ b/src/layouts/BreakSection/BreakSection.css
@@ -8,7 +8,7 @@
 .breakSection__textWrapper {
     width: 100%;
     min-height: 40%;
-    background-color: var(--main-color);
+    background-color: var(--main-lighter-color);
     display: flex;
     align-items: center;
     justify-content: center;
