--- a/src/layouts/AboutSection/AboutSection.css
+++ b/src/layouts/AboutSection/AboutSection.css
@@ -76,7 +76,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: var(--main-color);
+    background-color: var(--main-lighter-color);
     gap: 1rem;
 }
 
