--- a/src/layouts/Gallery/Gallery.css
+++ b/src/layouts/Gallery/Gallery.css
@@ -30,9 +30,40 @@
     z-index: -1;
 }
 
+.gallery__imgs {
+    margin-top: 9rem;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 5rem;
+    margin-bottom: 3rem;
+}
+
+.gallery__imgs__imgWrapper {
+    width: 25vw;
+    height: 40vh;
+}
+
+.gallery__imgs__imgWrapper__img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
 @media (max-width: 500px) {
     .gallery__text::before {
         top: 0;
         font-size: var(--medium-text);
+    }
+
+    .gallery__imgs {
+        margin-top: 0;
+        display: grid;
+        grid-template-columns: 1fr;
+        gap: 5rem;
+    }
+
+    .gallery__imgs__imgWrapper {
+        width: 90vw;
+        height: 40vh;
     }
 }
