--- a/src/layouts/Gallery/Gallery.css
+++ b/src/layouts/Gallery/Gallery.css
@@ -4,6 +4,7 @@
     flex-direction: column;
     align-items: center;
     background-color: var(--main-color);
+    padding-bottom: 1rem;
 }
 
 .gallery__text {
